--- a/tesi.html
+++ b/tesi.html
@@ -54,14 +54,14 @@
           <p class="banner__detail">
             and Prof. Antonio Parbonetti
           </p>
-          <object data="/uploads/MANZI_ANDREA.pdf" type="application/pdf" width="100%" height="1250px">
-            <p>Unable to display PDF file. <a href="/uploads/MANZI_ANDREA.pdf">Download</a> instead.</p>
+          <object data="uploads/MANZI_ANDREA.pdf" type="application/pdf" width="100%" height="1250px">
+            <p>Unable to display PDF file. <a href="uploads/MANZI_ANDREA.pdf">Download</a> instead.</p>
           </object>
           <button onclick="viewFullScreen()">View Full Screen</button>
           <script>
           function viewFullScreen() {
             // Open the PDF in a new tab and request full screen
-            window.open('/uploads/MANZI_ANDREA.pdf', '_blank').focus();
+            window.open('uploads/MANZI_ANDREA.pdf', '_blank').focus();
             }
             </script>
   </body>
