--- a/modello.html
+++ b/modello.html
@@ -57,7 +57,7 @@
         <div class="options"> 
           <button type="button" onclick="window.location.href='tesi.html'">tesi</button>
           <button type="button" onclick="window.location.href='presentazione.html'">presentazione</button>
-          <button type="button" onclick="window.location.href='https://unipdit-my.sharepoint.com/:x:/r/personal/andrea_manzi_2_studenti_unipd_it/Documents/simulation%20(1).xlsx?d=wbc40bec7288a42a9a32d933be7867c49&csf=1&web=1&e=jSomg1'">prova modello</button>
+          <button type="button" onclick="window.location.href='https://unipdit-my.sharepoint.com/:x:/g/personal/andrea_manzi_2_studenti_unipd_it/Ece-QLyKKKlCoy2TO-eGfEkBeJWST477Z5DEJkdII2KLzw?e=oDhV3V'">prova modello</button>
         </div>
       
         <div id="result"></div> <!-- This will display the output from the calculator -->        
